# comfyui_friendly_pipe

./: .gitignore  README.md  __init__.py  any_type.py  friendly-pipe-sandbox.json  friendly_pipe_edit.py  friendly_pipe_in.py  friendly_pipe_out.py  openai-workflows.json  pyproject.toml
.github/: copilot-instructions.md
js/: config.js  config.js.example  friendly_pipe.js
