[project]
name = "comfyui-friendly-pipe"
description = "Flexible pipe nodes for bundling and unbundling multiple connections of any type in ComfyUI"
version = "1.0.0"
license = "MIT"
readme = "README.md"

[project.urls]
Repository = "https://github.com/logicalor/comfyui-friendly-pipe"

[tool.comfy]
PublisherId = "logicalor"
DisplayName = "Friendly Pipe"
Icon = ""
